proxmox-iac/ansible/roles/traefik_routes/files/argocd-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints: ["web","websecure"]
  routes:
    - match: Host(`argocd.devistor.fr`) && HeadersRegexp(`CF-Connecting-IP`, `.+`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
