proxmox-iac/ansible/roles/traefik_routes/files/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints: ["web","websecure"]
  routes:
    - match: Host(`grafana.devistor.fr`) && HeadersRegexp(`CF-Connecting-IP`, `.+`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 3000
